Fri Sep 17 15:18:15 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * tao/Utils/Utils.mpc:

          Updated relative paths to the Template_Files.

Fri Sep 17 09:23:47 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * bin/tao_other_tests.lst:
          Disabled test for bug#2777 on builds without corba_messaging.
          tao_nslist requires the later.

Fri Sep 17 09:17:34 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Utils/Synch_Refcountable.h:
        * tao/Utils/Synch_Refcountable.inl:
        * tao/Utils/Synch_Refcountable.cpp:
          Removed these files, not used anymore, ACE_Atomic_Op is what is used
          instead

Fri Sep 17 06:26:49 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_interface/interface_ch.cpp:
        * TAO_IDL/be/be_visitor_interface/interface_cs.cpp:
          Moved implementation _nil method into the generated cpp file

Thu Sep 16 14:59:33 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/TransportCurrent/TC.mpc:
        * tao/TransportCurrent/TC_IIOP.mpc:
          Reduced the number of files generated

Thu Sep 16 14:54:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/TransportCurrent/TC.mpc:
        * tao/TransportCurrent/TC_IIOP.mpc:
          Added empty IDL_Files sections

Thu Sep 16 10:32:39 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * test/Bug_3812_Regression:
          Removed unused, incomplete and incorrect test.
          The test attempted to test the problems from the referred bug
          but instead of testing the code from TAO itself it tested some
          simulating code in the test itself making it independent of whether
          TAO was fixed or not.
          Unfortunately it is not possible to change the test to reliably
          reproduce the bug (or its being fixed) using more generalized code
          accessing TAO functionality itself.
